네이버 로그인 구현 완료

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,4 +1,8 @@
 @tailwind base;
 @tailwind components;
+@layer components {
+  .euid-input {
+    @apply text-sm px-3 py-1 w-full border border-gray-20 h-11 bg-white rounded-sm outline-none focus:border-primary focus:bg-blue-10;
+  }
+}
 @tailwind utilities;
-
