--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,8 +1,5 @@
-@tailwind base;
-@tailwind components;
-@layer components {
-  .euid-input {
-    @apply text-sm px-3 py-1 w-full border border-gray-20 h-11 bg-white rounded-sm outline-none focus:border-primary focus:bg-blue-10;
-  }
-}
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "./euid";
+@import "tailwindcss/utilities";
+@import "./euid-utils";
