--- a/src/css/style.css
+++ b/src/css/style.css
@@ -600,6 +600,82 @@ video {
   background-color: rgb(233 240 253 / var(--tw-bg-opacity));
 }
 
+.euid-focus {
+  border-radius: 0.125rem;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.euid-focus:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(3 207 93 / var(--tw-ring-opacity));
+}
+
+.euid-button {
+  height: 2.75rem;
+  width: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 207 93 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.euid-checkbox {
+  position: absolute;
+  height: 1.5rem;
+  width: 1.5rem;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.euid-checkbox-label {
+  display: inline-block;
+  height: 1.5rem;
+  background-image: url('/assets/icons/unchecked.svg');
+  background-repeat: no-repeat;
+  padding-left: 1.75rem;
+}
+
+.peer:checked ~ .euid-checkbox-label {
+  background-image: url('/assets/icons/checked.svg');
+}
+
+.euid-switch {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.euid-switch-label {
+  display: block;
+  width: 2rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(153 153 153 / var(--tw-text-opacity));
+}
+
+.euid-switch-label::after {
+  --tw-content: 'OFF';
+  content: var(--tw-content);
+}
+
+.peer:checked ~ .euid-switch-label {
+  --tw-text-opacity: 1;
+  color: rgb(3 207 93 / var(--tw-text-opacity));
+}
+
+.peer:checked ~ .euid-switch-label::after {
+  --tw-content: 'ON';
+  content: var(--tw-content);
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -620,8 +696,24 @@ video {
   position: relative;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
 .order-1 {
   order: 1;
+}
+
+.float-left {
+  float: left;
+}
+
+.m-5 {
+  margin: 1.25rem;
 }
 
 .mx-auto {
@@ -637,10 +729,6 @@ video {
   margin-top: 70px;
 }
 
-.block {
-  display: block;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -653,8 +741,8 @@ video {
   display: none;
 }
 
-.h-11 {
-  height: 2.75rem;
+.aspect-1 {
+  aspect-ratio: 1;
 }
 
 .h-12 {
@@ -665,16 +753,16 @@ video {
   height: 5rem;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .h-6 {
   height: 1.5rem;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-screen {
-  height: 100vh;
+.w-1\/5 {
+  width: 20%;
 }
 
 .w-12 {
@@ -685,14 +773,6 @@ video {
   width: 5rem;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
 .w-96 {
   width: 24rem;
 }
@@ -701,14 +781,8 @@ video {
   width: 230px;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.appearance-none {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+.w-6 {
+  width: 1.5rem;
 }
 
 .flex-row {
@@ -717,6 +791,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -735,8 +813,24 @@ video {
   gap: 0.5rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -745,16 +839,24 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.border-8 {
+  border-width: 8px;
+}
+
+.border-4 {
+  border-width: 4px;
 }
 
 .border-red-500 {
@@ -762,9 +864,9 @@ video {
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
-.bg-primary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 207 93 / var(--tw-bg-opacity));
+.border-gray-40 {
+  --tw-border-opacity: 1;
+  border-color: rgb(51 51 51 / var(--tw-border-opacity));
 }
 
 .bg-slate-400 {
@@ -777,16 +879,33 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'\/assets\/icons\/unchecked\.svg\'\)\] {
-  background-image: url('/assets/icons/unchecked.svg');
+.bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
-.bg-no-repeat {
-  background-repeat: no-repeat;
+.bg-gray-10 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(218 218 218 / var(--tw-bg-opacity));
+}
+
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 207 93 / var(--tw-bg-opacity));
 }
 
 .fill-red-500 {
   fill: #ef4444;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-top {
+  -o-object-position: top;
+     object-position: top;
 }
 
 .p-6 {
@@ -796,10 +915,6 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.pl-7 {
-  padding-left: 1.75rem;
 }
 
 .font-suit {
@@ -821,10 +936,6 @@ video {
   line-height: 1rem;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
 .font-semibold {
   font-weight: 600;
 }
@@ -838,11 +949,6 @@ video {
   color: rgb(18 18 18 / var(--tw-text-opacity));
 }
 
-.text-gray-20 {
-  --tw-text-opacity: 1;
-  color: rgb(153 153 153 / var(--tw-text-opacity));
-}
-
 .text-slate-500 {
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
@@ -853,14 +959,10 @@ video {
   color: rgb(255 20 20 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
+.shadow-\[0_0_0_2px_rgba\(255\2c 255\2c 255\)\] {
+  --tw-shadow: 0 0 0 2px rgba(255,255,255);
+  --tw-shadow-colored: 0 0 0 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .drop-shadow-lg {
@@ -874,13 +976,8 @@ video {
   transition-duration: 150ms;
 }
 
-.after\:content-\[\'OFF\'\]::after {
-  --tw-content: 'OFF';
-  content: var(--tw-content);
-}
-
-.checked\:bg-none:checked {
-  background-image: none;
+.shape-outside-circle{
+  shape-outside: circle(50%);
 }
 
 .hover\:fill-blue-600:hover {
@@ -890,26 +987,6 @@ video {
 .focus\:text-red-500:focus {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.focus\:ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-primary:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(3 207 93 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-warning:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(255 20 20 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-offset-2:focus {
-  --tw-ring-offset-width: 2px;
 }
 
 .active\:border:active {
@@ -923,20 +1000,6 @@ video {
 .active\:border-blue-500:active {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-
-.peer:checked ~ .peer-checked\:bg-\[url\(\'\/assets\/icons\/checked\.svg\'\)\] {
-  background-image: url('/assets/icons/checked.svg');
-}
-
-.peer:checked ~ .peer-checked\:text-primary {
-  --tw-text-opacity: 1;
-  color: rgb(3 207 93 / var(--tw-text-opacity));
-}
-
-.peer:checked ~ .peer-checked\:after\:content-\[\'ON\'\]::after {
-  --tw-content: 'ON';
-  content: var(--tw-content);
 }
 
 .peer:invalid ~ .peer-invalid\:block {
